[build-system]
requires = ["setuptools>=61.0", "pygame>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chobo"
version = "0.99.5"
authors = [
  { name="Choong-Soo Lee", email="clee@stlawu.edu" },
]
description = "A Python package for graphical displays"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/choongsoo/chobo"
"Bug Tracker" = "https://github.com/choongsoo/chobo/issues"
