[build-system]
requires = ["setuptools>=61.0", "pygame>=2.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chobo"
version = "0.99.6"
authors = [
  { name="Choong-Soo Lee", email="choongsoo.lee@gmail.com" },
]
description = "A Python package for graphical displays"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'pygame >= 2.5.0',
]

[project.urls]
"Homepage" = "https://github.com/choongsoo/chobo"
"Bug Tracker" = "https://github.com/choongsoo/chobo/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["chobo*"]
exclude = ["doc*", "tests*"]
